change project name

--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,6 @@
 {
-    "name": "danieljost/src",
-    "license": "proprietary",
+    "name": "dnl-jst/prider",
+    "license": "MIT",
     "type": "project",
     "autoload": {
         "psr-4": {
