send notifications to users if updates are available

--- a/app/config/services.yml
+++ b/app/config/services.yml
@@ -36,3 +36,6 @@ services:
 
     AppBundle\Util\UpdateChecker:
         public: true
+
+    AppBundle\Util\NotificationSender:
+        public: true
