allow users to set their locale

--- a/app/config/services.yml
+++ b/app/config/services.yml
@@ -39,3 +39,6 @@ services:
 
     AppBundle\Util\NotificationSender:
         public: true
+
+    AppBundle\EventSubscriber\LocaleSubscriber:
+        arguments: ['%kernel.default_locale%']
