--- a/package.json
+++ b/package.json
@@ -9,9 +9,9 @@
   "devDependencies": {
     "gulp": "^3.9.0",
     "gulp-autoprefixer": "^3.1.0",
+    "gulp-clean-css": "^3.2.0",
     "gulp-compass": "^2.1.0",
     "gulp-concat": "^2.6.0",
-    "gulp-ruby-sass": "^2.0.6",
-    "gulp-clean-css": "^3.2.0"
+    "gulp-sass": "^3.1.0"
   }
 }
