--- a/package.json
+++ b/package.json
@@ -11,7 +11,14 @@
     "gulp-autoprefixer": "^3.1.0",
     "gulp-clean-css": "^3.2.0",
     "gulp-compass": "^2.1.0",
-    "gulp-concat": "^2.6.0",
-    "gulp-sass": "^3.1.0"
+    "gulp-concat": "^2.6.1",
+    "gulp-sass": "^3.1.0",
+    "gulp-uglify": "^3.0.0"
+  },
+  "dependencies": {
+    "bootstrap": "4.0.0-beta.2",
+    "font-awesome": "^4.7.0",
+    "jquery": "^3.2.1",
+    "popper.js": "^1.12.9"
   }
 }
