--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "devDependencies": {
     "gulp": "^3.9.0",
     "gulp-autoprefixer": "^3.1.0",
+    "gulp-changed": "^3.1.1",
     "gulp-clean-css": "^3.2.0",
     "gulp-compass": "^2.1.0",
     "gulp-concat": "^2.6.1",
